--- a/css/access.css
+++ b/css/access.css
@@ -73,6 +73,7 @@
 .list .list-product .product-card .card-view.active {
     display: block;
 }
+
 .list .list-product .product-card .card {
     margin-bottom: 20px;
 }
@@ -85,9 +86,11 @@
 }
 .list .list-product .product-card .card-img img {
     width: 300px;
-    height: 200px;
+    height: 300px;
+    margin: 0 auto;
     object-fit: cover;
 }
+
 .list .list-product .product-card .card-img .card-hover {
     position: absolute;
     font-size: 20px;
@@ -114,10 +117,11 @@
     color: black;
     border-bottom: 1px solid grey;
     padding-bottom: 10px;
+    font-size: 20px;
 }
 .list .list-product .product-card .card-subtitle {
     justify-content: space-between;
-    font-size: 14px;
+    font-size: 16px;
 }
 .list .list-product .product-card .card-subtitle ul li {
     margin-right: 14px;
@@ -139,17 +143,10 @@
     height: 2px;
     width: 50px;
     top: -7px;
-    left: 104px;
+    left: 166px;
     background-color: var(--primary-color);
 }
-.list .list-product .product-card .card .tag {
-    position: absolute;
-    top: 20px;
-    left: 10px;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-    padding: 5px 10px;
-}
+
 .list .list-product .product-card .card-bar {
     background-color: var(--secondary-color);
     display: flex;
@@ -165,7 +162,9 @@
     width: 50%;
 }
 .list .list-product .product-card .card-img-left img {
-    height: 220px;
+    height: 300px;
+    width: 300px;
+    margin: 0 auto;
     object-fit: cover;
 }
 .list .list-product .product-card .card-body-right {
