--- a/css/cart.css
+++ b/css/cart.css
@@ -1,3 +1,49 @@
+.navbar .icon .cart {
+    position: relative;
+}
+.navbar .icon .cart .cart_box2.active {
+    display: block;
+    display: flex;
+    align-items: center;
+}
+.navbar .icon .cart .cart_box2 {
+    display: none;
+}
+
+.navbar .icon .cart .cart_box2 {
+    position: absolute;
+    width: 300px;
+    top: 30px;
+    left: -290px;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px 0px 10px 10px;
+    opacity: 0;
+    transition: 0.5s;
+    visibility: hidden;
+}
+.navbar .icon .cart:hover .cart_box2 {
+    opacity: 1;
+    visibility: visible;
+}
+.navbar .icon .cart .cart_box2 .img {
+    width: 30%;
+    margin: 0;
+}
+.navbar .icon .cart .cart_box2 .text {
+    margin-left: 20px;
+}
+.navbar .icon .cart .cart_box2 .name {
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+.navbar .icon .cart .cart_box2 .amount {
+    color: black;
+}
+
 .cart-view {
     padding-top: 100px;
 }
@@ -14,34 +60,71 @@
     width: 30%;
 }
 .left .title {
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 .left .cart-img img {
     border-radius: 8px;
     margin-top: 20px;
+    width: 50%;
 }
 .right {
-    width: 50%;
-    margin-left: 30px;
-}
-.right .title {
-    color: var(--primary-color);
+    color: var(--secondary-color);
+    width: 70%;
 }
 .right .row {
     color: var(--secondary-color);
     border-bottom: 1px solid rgba(255, 255, 255, 0.498);
 }
-.right .row:last-child {
+
+.right .row p {
+    margin-top: 10px;
+    font-size: 20px;
+}
+.right .add {
+    display: flex;
+    align-items: center;
+}
+.right input {
+    text-align: center;
+    width: 10%;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 2px;
+    outline: none;
+    border: none;
+}
+
+.right .title {
+    color: var(--primary-color);
+}
+.right i {
+    transition: 0.5s;
+}
+.right i:hover {
+    color: var(--primary-color);
+}
+.total {
+    margin-top: 50px;
+    width: 50%;
+}
+.total .title {
+    color: var(--primary-color);
+}
+.total .row {
+    color: var(--secondary-color);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.498);
+}
+.total .row:last-child {
     border: none;
     color: var(--primary-color);
 }
-.right .row p {
+.total .row p {
     margin-top: 10px;
 }
-.right .btn {
+.total .btn {
     text-align: left;
 }
-.right .btn button {
+.total .btn button {
     padding: 10px 40px;
     margin-top: 20px;
     margin-bottom: 50px;
@@ -51,9 +134,9 @@
     color: var(--secondary-color);
     transition: 0.5;
 }
-.right .btn button:hover {
+.total .btn button:hover {
     filter: grayscale(0.2);
 }
-.right .btn button a {
+.total .btn button a {
     color: var(--secondary-color);
 }
