--- a/css/checkout.css
+++ b/css/checkout.css
@@ -10,3 +10,111 @@
 .checkout .breadcrumb-item.active a {
     color: var(--primary-color);
 }
+.form .bill-form {
+    margin-bottom: 50px;
+}
+.form .bill-form .info {
+    margin-top: 20px;
+}
+.form .bill-form .info input {
+    display: block;
+    width: 50%;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    outline: none;
+}
+.title {
+    color: var(--primary-color);
+}
+.total .row {
+    color: var(--secondary-color);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.498);
+}
+.total .row:last-child {
+    border: none;
+    color: var(--primary-color);
+}
+.total .row p {
+    margin-top: 10px;
+}
+.btn {
+    text-align: right;
+}
+.btn button {
+    padding: 10px 40px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    border-radius: 8px;
+    border: none;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    transition: 0.5;
+}
+.btn button:hover {
+    filter: grayscale(0.2);
+}
+.btn button a {
+    color: var(--secondary-color);
+}
+.pay {
+    margin-top: 30px;
+}
+.pay .text p {
+    color: var(--secondary-color);
+    font-size: 16px;
+}
+.popup {
+    position: absolute;
+    top: 0;
+    background-color: rgba(147, 147, 147, 0.393);
+    width: 100%;
+    height: 100%;
+    z-index: 6;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+}
+.popup.active {
+    visibility: visible;
+    opacity: 1;
+}
+.popup-content {
+    position: absolute;
+    overflow: hidden;
+    background-color: var(--primary-color);
+    width: 70%;
+    top: 200px;
+    left: 240px;
+    text-align: center;
+    padding: 50px;
+    color: var(--secondary-color);
+    z-index: 7;
+}
+
+.popup i {
+    font-size: 40px;
+}
+.popup h4 {
+    color: rgb(44, 44, 44);
+    font-weight: 400;
+}
+.popup .text {
+    z-index: 2;
+}
+.popup img {
+    position: absolute;
+    width: 60%;
+    top: -30px;
+    right: -120px;
+    opacity: 0.5;
+    z-index: 1;
+}
+.popup .btn button {
+    margin-bottom: 10px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+.popup .btn button a {
+    color: var(--primary-color);
+}
